# easy-sgr

./: .gitignore  Cargo.toml  LICENSE  README.md  copy_librs.py  copy_readme.py  workflow.sh
.github/workflows/: rust.yaml  rust.yml
macros/: Cargo.toml  README.md  SYNTAX.md  keywords.md  syntax.md
macros/src/: README.md  form.rs  lib.rs  parse.rs  sgr.rs  test.rs
scripts/: copy_librs.py  copy_readme.py  workflow.sh
src/: color.rs  discrete.rs  graphics.rs  inline.rs  lib.rs  main.rs  not_main.rs  parser.rs  style.rs  tests.rs  write.rs  writer.rs  writing.rs
src/discrete/: from_str.rs  mod.rs
src/graphics/: discrete.rs  display.rs  inline.rs  mod.rs
tests/: discrete.rs  graphics.rs  macro.rs  writing.rs
