[package]
name = "easy-sgr"
version = "0.0.8"
authors = ["Tamim Hakimi <tamimhakimi21@gmail.com>"]
description = "An easy to use Select Graphics Rendition(SGR) library"
edition = "2021"
homepage = "https://github.com/4lineclear/easy-sgr/tree/main"
repository = "https://github.com/4lineclear/easy-sgr/tree/main"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["SGR", "cli", "color", "terminal", "text"]
exclude = ["/scripts, /.settings.json"]

[dependencies]
easy-sgr-macros = { version = "*", path = "macros" }

[workspace]
members = ["macros"]

[features]
partial = []
from-str = []
macros = []
macro-only = ["macros"]
