[package]
name = "easy-sgr"
version = "0.1.0"
authors = ["Tamim Hakimi <tamimhakimi21@gmail.com>"]
description = "An easy to use Select Graphics Rendition(SGR) library"
edition = "2021"
homepage = "https://github.com/4lineclear/easy-sgr/tree/main"
repository = "https://github.com/4lineclear/easy-sgr/tree/main"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["SGR", "cli", "color", "terminal", "text"]
exclude = ["/scripts, /.settings.json"]

[dependencies]
easy-sgr-macros = { version = "*", path = "macros", optional = true}

[workspace]
members = ["macros"]

[features]
partial = []
from-str = []
macros = ["dep:easy-sgr-macros"]
macro-only = ["macros"]
