[package]
name = "easy-sgr"
version = "0.1.0"
authors = ["Tamim Hakimi <tamimhakimi21@gmail.com>"]
description = "An easy to use Select Graphics Rendition(SGR) library"
edition = "2021"
homepage = "https://github.com/4lineclear/easy-sgr/tree/main"
repository = "https://github.com/4lineclear/easy-sgr/tree/main"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["SGR", "cli", "color", "terminal", "text"]
exclude = ["/scripts, /.settings.json"]

[dependencies]
easy-sgr-macros = { version = "0.1.0", path = "macros", optional = true}

[workspace]
members = ["macros"]

[features]
# Code are printed partially: the SGR start end ending strings are not printed
partial = []
# FromStr impls
from-str = []
# easy-sgr-macros re-exports
macros = ["dep:easy-sgr-macros"]
# Only using easy-sgr-macros
macro-only = ["macros"]
