[package]
name = "easy-sgr-macros"
version = "0.0.0"
authors = ["Tamim Hakimi <tamimhakimi21@gmail.com>"]
description = "The implementation of macros used within easy-sgr"
edition = "2021"
homepage = "https://github.com/4lineclear/easy-sgr/tree/main"
repository = "https://github.com/4lineclear/easy-sgr/tree/main"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface"]
keywords = ["SGR", "cli", "color", "terminal", "text"]
